# BarrelMCD-python

./: .dockerignore  .editorconfig  .gitignore  AMELIORATIONS_RESUME.md  BarrelMCD.spec  CHANGELOG_MARKDOWN_IMPORT.md  IMPROVEMENT_REPORT.md  LICENSE  PLAN_AMELIORATION_LOOPING.md  QUALITY_REPORT.md  README.md  README_CLI.md  build.py  cli_markdown_import.py  convert_icon.py  convert_pyqt.py  convert_svg.py  convert_svg_to_png.py  create_icon.py  demo_markdown_import.py  index.html  main.py  push_sans_cosignature.sh  pyproject.toml  requirements.txt  resize_logos.py  run_api.sh  setup.py  test_cli.py  test_functionality.py  test_improved_precision.py  test_key_rules.py  test_logo_demo.py  test_markdown_parser.py  test_quality_analysis.py  test_verbose.py
BarrelMCD-python-main/: README.md  logo_preview.html  requirements.txt
api/: README.md  __init__.py  main.py  requirements.txt
artifacts/: build-arch.sh  build-deb-podman.sh
barrelmcd-flutter-1.0.0/: barrelmcd_flutter
barrelmcd_flutter/: .metadata  LICENSE  PUBLICATION.md  README.md  pubspec.yaml
css/: barrel_theme.css  barrel_theme.min.css
deb-artifact/: barrelmcd-flutter_1.0.0-1.debian.tar.xz  barrelmcd-flutter_1.0.0-1.dsc  barrelmcd-flutter_1.0.0-1_source.changes
docs/: ANALYSE_JMERISE_LIENS_ASSOCIATIONS.md  ANALYSE_LOGIQUE_METIER_LOOPING.md  ANALYSE_RADARE2_LOOPING.md  ANALYSE_RADARE2_LOOPING_SQL_SEARCH.md  ANALYSE_RIEN_NE_SE_PASSE.md  COMPARAISON_LOOPING_BARREL_MLD_MPD.md  COMPORTEMENT_LOOPING_ANALYSE_RADARE2.md  FONCTIONNALITES_MCD_LOOPING.md  INTERFACE_ANALYSE_FLUTTER.md  LOGIQUE_METIER_PARTAGEE.md  (+9 more)
(+329 files in other folders)
